k8s/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-green
  namespace: bluegreen
  labels:
    app: web
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
      version: green
  template:
    metadata:
      labels:
        app: web
        version: green
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
          volumeMounts:
            - name: web-content
              mountPath: /usr/share/nginx/html
      volumes:
        - name: web-content
          configMap:
            name: web-content-green
