k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: bluegreen
  labels:
    app: web
spec:
  type: NodePort
  selector:
    app: web
    version: blue   # default traffic to BLUE. Switch to GREEN using patch.
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
